--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@hotwired/turbo-rails": "^7.2.0",
     "@inertiajs/inertia": "^0.11.1",
     "@inertiajs/inertia-react": "^0.8.1",
+    "@inertiajs/server": "^0.1.0",
+    "@vitejs/plugin-react": "^2.1.0",
     "esbuild": "^0.15.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
