--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "esbuild": "^0.15.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "vite": "^3.0.0",
     "vite-plugin-ruby": "^3.1.0"
   },
