--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,7 @@ AllCops:
     - Rakefile
     - 'bin/**/*'
     - 'db/schema.rb'
+    - 'spec/spec_helper.rb'
 
 Layout/BlockAlignment:
   Description: 'Align block ends correctly.'
