--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,7 @@ AllCops:
     - 'bin/**/*'
     - 'db/schema.rb'
     - 'spec/spec_helper.rb'
+    - 'config/puma.rb'
 
 Layout/BlockAlignment:
   Description: 'Align block ends correctly.'
@@ -295,3 +296,6 @@ Style/HashTransformKeys:
 
 Style/HashTransformValues:
   Enabled: false
+
+Rails/FilePath:
+  EnforcedStyle: arguments
