--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -34,8 +34,15 @@ jobs:
         with:
           ruby-version: 3.1.2
           bundler-cache: true
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Setup database schema
         # 💣 Do not use `db:schema:load` in your production server
         run: bin/rails db:schema:load
+      - name: Install React dependencies
+        run: |
+          yarn install --frozen-lockfile
       - name: Run tests
         run: bundle exec rspec
