--- a/.github/workflows/pronto.yml
+++ b/.github/workflows/pronto.yml
@@ -10,6 +10,9 @@ permissions:
   contents: read
   issues: write
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   linters:
