--- a/.github/workflows/pronto.yml
+++ b/.github/workflows/pronto.yml
@@ -40,5 +40,5 @@ jobs:
       - name: Run pronto
         run: pronto run -f github_status github_pr -c origin/${{ github.base_ref }}
         env:
-          PRONTO_GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PRONTO_GITHUB_ACCESS_TOKEN: ${{ github.token }}
           PRONTO_PULL_REQUEST_ID: ${{ github.event.pull_request.number  }}
