--- a/.github/workflows/pronto.yml
+++ b/.github/workflows/pronto.yml
@@ -5,11 +5,6 @@ on:
     branches:
       - main
 
-permissions:
-  id-token: write
-  contents: read
-  issues: write
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
@@ -40,5 +35,5 @@ jobs:
       - name: Run pronto
         run: pronto run -f github_status github_pr -c origin/${{ github.base_ref }}
         env:
-          PRONTO_GITHUB_ACCESS_TOKEN: ${{ github.token }}
+          PRONTO_GITHUB_ACCESS_TOKEN: "${{ github.token }}"
           PRONTO_PULL_REQUEST_ID: ${{ github.event.pull_request.number  }}
