--- a/.github/workflows/pronto.yml
+++ b/.github/workflows/pronto.yml
@@ -9,6 +9,11 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
+permissions:
+  id-token: write
+  contents: write
+  pull-requests: write
+  
 jobs:
   linters:
     name: Linters
