ci: :construction: pick 25 commits

--- a/.github/workflows/pronto.yml
+++ b/.github/workflows/pronto.yml
@@ -21,6 +21,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          # https://github.com/prontolabs/pronto/issues/404
+          # RCA: repository.rb:87:in `merge_base': object not found - no match for id (6378c7fa381ab33635bb41b9fd638876286a3d85) (Rugged::OdbError)
+          fetch-depth: 25
       # Pronto docs suggest limiting the depth of the clone
       # to speed things up.
       - run: |
