--- a/.github/workflows/pronto.yml
+++ b/.github/workflows/pronto.yml
@@ -12,8 +12,9 @@ concurrency:
 permissions:
   id-token: write
   contents: write
-  pull-requests: write
-  
+  pull-requests: read
+  statuses: write
+
 jobs:
   linters:
     name: Linters
