feat: :green_heart: run linters on main

--- a/.github/workflows/pronto.yml
+++ b/.github/workflows/pronto.yml
@@ -1,9 +1,16 @@
 name: Pronto
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
+    types:
+      - opened
+      - reopened
+      - synchronize
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
