--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions@1.3
         with:
-          args: "deploy -c fly.toml"
+          args: "deploy -c fly.toml --remote-only"
