--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
+    "sass": "^1.56.1",
     "vite": "^3.0.0",
     "vite-plugin-ruby": "^3.1.0"
   },
