--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@inertiajs/inertia-react": "^0.8.1",
     "@inertiajs/server": "^0.1.0",
     "@vitejs/plugin-react": "^2.1.0",
+    "chart.js": "^4.0.1",
     "esbuild": "^0.15.10",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "sass": "^1.56.1",
