feat: :technologist: Add react/jsx-uses-react rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,7 @@
                 "endOfLine": "auto",
                 "singleQuote": true
             }
-        ]
+        ],
+        "react/jsx-uses-react": "error"
     }
 }
