--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,4 +19,7 @@
         "editor.formatOnSave": false
     },
     "ruby.format": "rubocop",
+    "cSpell.words": [
+        "inertiajs"
+    ],
 }
