--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eslint-plugin-react-hooks": "4.5.0",
     "prettier": "2.6.2",
     "sass": "1.56.1",
-    "typescript": "^4.9.3",
+    "typescript": "4.7.4",
     "vite": "3.0.0",
     "vite-tsconfig-paths": "3.6.0"
   }
