--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "3.1.0",
     "@hotwired/turbo-rails": "7.2.0",
+    "@inertiajs/core": "^1.0.0-beta.1",
     "@inertiajs/inertia": "0.11.1",
     "@inertiajs/inertia-react": "0.8.1",
     "@inertiajs/server": "0.1.0",
