--- a/.eslintrc
+++ b/.eslintrc
@@ -46,5 +46,9 @@
             }
         ],
         "react/jsx-uses-react": "error"
+    },
+    "env": {
+        "browser": true,
+        "node": true
     }
 }
