--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -62,4 +62,4 @@ jobs:
       - name: Lint
         run: yarn lint
       - name: Build
-        run: yarn build:ssr
+        run: yarn ci:build:ssr
