--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@hotwired/stimulus": "3.1.0",
     "@hotwired/turbo-rails": "7.2.0",
     "@inertiajs/core": "^1.0.0-beta.1",
@@ -9,10 +10,12 @@
     "@inertiajs/inertia-react": "0.8.1",
     "@inertiajs/server": "0.1.0",
     "chart.js": "4.0.1",
+    "chroma-js": "^2.4.2",
     "react": "18.2.0",
     "react-chartjs-2": "5.0.1",
     "react-dom": "18.2.0",
     "react-hook-form": "7.38.0",
+    "react-select": "^5.6.1",
     "vite-plugin-ruby": "3.1.0"
   },
   "scripts": {
@@ -31,6 +34,7 @@
     "ci:build:ssr": "vite build --ssr"
   },
   "devDependencies": {
+    "@types/chroma-js": "^2.1.4",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.26.0",
