--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   workflow_dispatch:
-    
+
   push:
     branches:
       - main
@@ -22,4 +22,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions@1.3
         with:
-          args: "deploy -c fly.toml --remote-only"
+          args: 'deploy -c fly.toml --remote-only'
+      - run: "flyctl ssh console --command 'bin/rails db:recreate:seed'"
