--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,4 @@ jobs:
       - uses: superfly/flyctl-actions@1.3
         with:
           args: 'deploy -c fly.toml --remote-only'
-      - run: "flyctl ssh console --command 'bin/rails db:recreate:seed'"
+      # - run: "flyctl ssh console --command '/app/bin/rails db:seed RAILS_ENV=production DISABLE_DATABASE_ENVIRONMENT_CHECK=1'"
