--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@hotwired/stimulus": "3.1.0",
     "@hotwired/turbo-rails": "7.2.0",
