--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.38.0",
+    "react-icons": "^4.7.1",
+    "react-masonry-css": "^1.0.16",
     "react-select": "^5.6.1",
+    "react-slick": "^0.29.0",
     "recharts": "^2.2.0",
+    "slick-carousel": "^1.8.1",
     "vite-plugin-ruby": "3.1.0"
   },
   "scripts": {
@@ -37,6 +41,7 @@
     "@types/chroma-js": "^2.1.4",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-slick": "^0.23.10",
     "@types/react-virtualized": "^9.21.21",
     "@typescript-eslint/eslint-plugin": "5.26.0",
     "@typescript-eslint/parser": "5.26.0",
