--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@inertiajs/inertia": "0.11.1",
     "@inertiajs/inertia-react": "0.8.1",
     "@inertiajs/server": "0.1.0",
+    "@react-icons/all-files": "^4.1.0",
     "chroma-js": "^2.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
