feat: :sparkles: Pagination for products

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,8 @@
     },
     "ruby.format": "rubocop",
     "cSpell.words": [
-        "inertiajs"
+        "blackhole",
+        "inertiajs",
+        "Pagy"
     ],
 }
