--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "app",
   "private": "true",
   "dependencies": {
-    "@faker-js/faker": "^7.6.0",
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@hotwired/stimulus": "3.1.0",
     "@hotwired/turbo-rails": "7.2.0",
@@ -24,8 +23,10 @@
     "vite-plugin-ruby": "3.1.0"
   },
   "scripts": {
-    "clean": "npx rimraf node_modules public/vite-*",
+    "clean": "npx rimraf node_modules public/vite-* public/vite",
+    "clean:build": "npx rimraf public/vite-* public/vite tmp/cache/vite",
     "build:ssr": "bin/vite build --ssr",
+    "build:csr": "bin/vite build",
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
     "dev": "bin/vite dev",
     "dev:ssr": "bin/vite ssr",
@@ -36,7 +37,8 @@
     "format": "npm run prettier:fix && npm run lint:fix",
     "prepare": "husky install",
     "pretty-quick": "pretty-quick --staged",
-    "ci:build:ssr": "vite build --ssr"
+    "ci:build:ssr": "vite build --ssr",
+    "analyze": "source-map-explorer 'public/vite/assets/*.js'"
   },
   "devDependencies": {
     "@types/chroma-js": "^2.1.4",
@@ -59,6 +61,7 @@
     "prettier": "^2.8.0",
     "pretty-quick": "^3.1.3",
     "sass": "1.56.1",
+    "source-map-explorer": "^2.5.3",
     "typescript": "4.7.4",
     "vite": "3.0.0",
     "vite-tsconfig-paths": "3.6.0"
