--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,13 +7,17 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket-<%= Rails.env %>
-
+amazon:
+  service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  region: ap-south-1
+  bucket: crostarter
+  http_open_timeout: 0
+  http_read_timeout: 0
+  retry_limit: 0
+  # upload:
+  #   server_side_encryption: "" # 'aws:kms' or 'AES256'
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
