--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@inertiajs/core": "^1.0.0-beta.1",
     "@inertiajs/inertia": "0.11.1",
     "@inertiajs/inertia-react": "0.8.1",
+    "@inertiajs/progress": "^0.2.7",
     "@inertiajs/server": "0.1.0",
     "@react-icons/all-files": "^4.1.0",
     "chroma-js": "^2.4.2",
