--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -88,7 +88,7 @@ jobs:
         run: yarn install --immutable
 
       - name: 🔎 Type check
-        run: yarn typecheck --if-present
+        run: yarn typecheck
 
   builds:
     runs-on: ubuntu-latest
