--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -51,7 +51,46 @@ jobs:
           PRONTO_GITHUB_ACCESS_TOKEN: ${{ github.token }}
           PRONTO_PULL_REQUEST_ID: ${{ github.event.pull_request.number  }}
 
-  react-linters:
+  eslint:
+    name: ⬣ ESLint
+    runs-on: ubuntu-latest
+    steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: 📥 Download deps
+        run: yarn install --immutable
+
+      - name: 🔬 Lint
+        run: yarn lint
+
+  typecheck:
+    name: ʦ TypeScript
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.11.0
+
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: 📥 Download deps
+        run: yarn install --immutable
+
+      - name: 🔎 Type check
+        run: yarn typecheck
+
+  builds:
     runs-on: ubuntu-latest
     name: Lint & build
     steps:
@@ -59,7 +98,7 @@ jobs:
       - uses: actions/setup-node@v3
       - name: Install
         run: yarn install --immutable
-      - name: Lint
-        run: yarn lint
-      - name: Build
+      - name: SSR Build
         run: yarn ci:build:ssr
+      - name: CSR Build
+        run: yarn ci:build:csr
