--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.7.1",
     "react-masonry-css": "^1.0.16",
     "react-select": "^5.6.1",
-    "recharts": "^2.2.0"
+    "recharts": "^2.2.0",
+    "vite-plugin-ruby": "3.1.0"
   },
   "scripts": {
     "clean": "npx rimraf node_modules public/vite-* public/vite",
@@ -40,7 +41,9 @@
     "ci:build:csr": "vite build"
   },
   "devDependencies": {
+    "@playwright/test": "^1.29.1",
     "@types/chroma-js": "^2.1.4",
+    "@types/node": "17.0.41",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/react-virtualized": "^9.21.21",
@@ -62,7 +65,6 @@
     "source-map-explorer": "^2.5.3",
     "typescript": "4.7.4",
     "vite": "3.0.0",
-    "vite-plugin-ruby": "3.1.0",
     "vite-tsconfig-paths": "3.6.0"
   }
 }
