--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-icons": "^4.7.1",
     "react-masonry-css": "^1.0.16",
     "react-select": "^5.6.1",
-    "recharts": "^2.2.0",
-    "vite-plugin-ruby": "3.1.0"
+    "recharts": "^2.2.0"
   },
   "scripts": {
     "clean": "npx rimraf node_modules public/vite-* public/vite",
@@ -65,6 +64,7 @@
     "source-map-explorer": "^2.5.3",
     "typescript": "4.7.4",
     "vite": "3.0.0",
+    "vite-plugin-ruby": "3.1.0",
     "vite-tsconfig-paths": "3.6.0"
   }
 }
