--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ci:build:csr": "vite build"
   },
   "devDependencies": {
+    "@playwright/test": "^1.29.1",
     "@types/chroma-js": "^2.1.4",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
