--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,6 +24,7 @@ jobs:
         run: yarn playwright test
         env:
           PLAYWRIGHT_TEST_BASE_URL: ${{ secrets.PLAYWRIGHT_TEST_BASE_URL }}
+          CI_TEST_API_KEY: ${{ secrets.CI_TEST_API_KEY }}
       - uses: actions/upload-artifact@v3
         if: always()
         with:
