--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,16 +20,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: superfly/flyctl-actions@1.3
-        with:
-          args: 'deploy -c fly.toml --remote-only'
-      - uses: superfly/flyctl-actions@1.3
-        with:
-          args: 'echo $(flyctl list apps --json) > flyapps.json'
-          # FIXME: will above command can be understood by action ?
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: |
+          flyctl deploy -c fly.toml --remote-only
+
+  delete-builder:
+    needs: deploy
+    name: Destroy app
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: |
+          echo $(flyctl list apps --json) > flyapps.json
       - run: |
           cat flyapps.json | jq '.[] | select(.Name | contains("builder")) | .Name' > builder
-      - uses: superfly/flyctl-actions@1.3
-        with:
-          args: 'flyctl destroy $(cat builder) -y'
-      # - run: "flyctl ssh console --command '/app/bin/rails db:seed RAILS_ENV=production DISABLE_DATABASE_ENVIRONMENT_CHECK=1'"
+      - name: 'Banana show'
+        run: |
+          flyctl destroy $(cat builder | tr -d '"') -y
+          echo "Completed 💣 $(cat builder) ␡ !"
