ci: :heavy_plus_sign: foreman
Signed-off-by: Lakshmaji <lakshmaji@users.noreply.github.com>

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           yarn
           bundle install
+          gem install foreman
 
       - name: Start Redis
         uses: supercharge/redis-github-action@1.5.0
