ci: :alien: with containers
Signed-off-by: Lakshmaji <lakshmaji@users.noreply.github.com>

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,48 +12,36 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        redis-version: [6]
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      # - name: install ssl
-      #   run: |
-      #     apt-get install openssl
-      - uses: ruby/setup-ruby@v1.120.0
-        with:
-          ruby-version: 3.1.2
-          bundler-cache: true
-
-      - name: Install dependencies
-        run: |
-          yarn
-          bundle install
-          gem install foreman
-
-      - name: Start Redis
-        uses: supercharge/redis-github-action@1.5.0
-        with:
-          redis-version: ${{ matrix.redis-version }}
-
-      - name: Set up database
-        run: |
-          bin/rails db:create
-          bin/rails db:migrate
-          bin/rails db:seed
-
-      - name: Launch server
-        run: |
-          cp .env.example .env
-          yarn build:ssr
-          nohup foreman start -f Procfile.dev
-
       - name: Install Playwright Browsers
         run: yarn playwright install --with-deps
+
+      - name: Set up Docker
+        uses: docker/setup-docker@v2
+
+      - name: Build Docker image
+        run: docker build -t my-rails-app -f Dockerfile.ci .
+
+      - name: Start Rails server
+        run: docker run -d -p 3000:3000 --env REDIS_URL=redis://${{ job.services.redis.env.REDIS_HOST }}:${{ job.services.redis.env.REDIS_PORT }} my-rails-app
+
+      - name: Wait for server to start
+        run: sleep 10
+
       - name: Run Playwright tests
         run: yarn playwright test
         env:
@@ -61,10 +49,10 @@ jobs:
           CI_TEST_API_KEY: ${{ secrets.CI_TEST_API_KEY }}
 
       - name: Stop Rails server
-        run: |
-          kill $(lsof -t -i :3000) # Stop the server running on port 5000
-          kill $(lsof -t -i :13714) # Stop the server running on port 13714
-          bin/rails db:drop
+        run: docker stop $(docker ps -q --filter ancestor=my-rails-app)
+
+      - name: Clean up Docker containers
+        run: docker system prune --force
 
       - uses: actions/upload-artifact@v3
         if: always()
