ci: install deps
Signed-off-by: Lakshmaji <lakshmaji@users.noreply.github.com>

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,7 +28,9 @@ jobs:
           node-version: 16
 
       - name: Install Playwright Browsers
-        run: yarn playwright install --with-deps
+        run: |
+          yarn
+          yarn playwright install --with-deps
 
       - name: Build Docker image
         run: docker build -t my-rails-app -f Dockerfile.ci .
