ci: :alembic: install
Signed-off-by: Lakshmaji <lakshmaji@users.noreply.github.com>

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install Playwright Browsers
         run: |
-          yarn
+          yarn install
           yarn playwright install --with-deps
 
       - name: Build Docker image
