--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,35 +1,18 @@
 # Base image
-FROM alpine:latest
+FROM alpine:3.17.0
 
-
-# Install necessary dependencies
-RUN apk update && \
-    apk add --no-cache \
+# Install dependencies
+RUN apk add --no-cache \
     build-base \
-    curl \
-    git \
-    openssl \
-    openssl-dev \
-    readline-dev \
-    zlib-dev
+    libffi-dev \
+    libressl-dev \
+    postgresql-dev \
+    nodejs \
+    yarn
 
-# Install rbenv
-RUN git clone https://github.com/rbenv/rbenv.git ~/.rbenv && \
-    echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc && \
-    echo 'eval "$(rbenv init -)"' >> ~/.bashrc && \
-    source ~/.bashrc && \
-    echo 'source ~/.bashrc' >> ~/.bash_profile
-
-# Install ruby-build as a plugin for rbenv
-RUN git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
-
-# Set the environment variables for rbenv
-ENV PATH="/root/.rbenv/bin:/root/.rbenv/shims:${PATH}"
-
-# Install Ruby
-ARG RUBY_VERSION=3.1.2
-RUN rbenv install $RUBY_VERSION && \
-    rbenv global $RUBY_VERSION
+# Install Ruby and Bundler
+RUN apk add --no-cache ruby=3.1.2-r0 ruby-dev=3.1.2-r0
+RUN gem install bundler:2.2.33
 
 
 # Set the working directory
@@ -56,7 +39,7 @@ COPY .env.example .env
 # RUN apt-get install -y ruby-build
 # RUN rbenv install 3.1.2
 # RUN rbenv global 3.1.2
-RUN gem install bundler rails
+# RUN gem install bundler rails
 
 
 # Install rails server dependencies
