--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -10,7 +10,7 @@ COPY . /app
 # Copy the .env.example to .env
 COPY .env.example .env
 
-Install rbenv
+# Install rbenv
 RUN curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
 RUN echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
 RUN echo 'eval "$(rbenv init -)"' >> ~/.bashrc
