--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -10,10 +10,11 @@ COPY . /app
 # Copy the .env.example to .env
 COPY .env.example .env
 
-RUN apt-get update && apt-get install -y curl
+RUN apt update && apt install -y curl
 
 # Install rbenv
-RUN curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
+# RUN curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
+RUN apt install rbenv
 RUN echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
 RUN echo 'eval "$(rbenv init -)"' >> ~/.bashrc
 RUN exec $SHELL
