feat: :closed_lock_with_key: for production and development
Signed-off-by: Lakshmaji <lakshmaji@users.noreply.github.com>

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,4 +23,8 @@ test:
 production:
   <<: *default
   adapter: postgresql
+  <% if ENV['DATABASE_URL'] %>
   url: <%= ENV['DATABASE_URL'] %>
+  <% else %>
+  url: <%= Rails.application.credentials.config[:DATABASE_URL] %>
+  <% end %>
