--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -42,6 +42,8 @@ jobs:
 
       - name: Set up database
         run: |
+          # TODO: remove database
+          bin/rails db:drop
           export REDIS_URL="redis://localhost:6379"
           bin/rails db:create
           bin/rails db:migrate
