--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "private": "true",
+  "private": true,
   "dependencies": {
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@inertiajs/core": "^1.0.0",
@@ -65,5 +65,8 @@
     "vite": "3.0.0",
     "vite-plugin-ruby": "3.1.0",
     "vite-tsconfig-paths": "3.6.0"
+  },
+  "engines": {
+    "node": ">=16 <=18.15.0"
   }
 }
